--- a/.github/actions/gcp-warm-up/action.yml
+++ b/.github/actions/gcp-warm-up/action.yml
@@ -44,10 +44,11 @@ runs:
       run: gcloud auth configure-docker ${{ inputs.region }}-docker.pkg.dev
       shell: bash
 
-    - name: Get Credentials
+    - name: Authenticate to Kubernetes Cluster
       if: ${{ inputs.cluster_name != '' }}
       run: |
         curl -L https://github.com/roboll/helmfile/releases/download/v0.144.0/helmfile_linux_amd64 -o /usr/local/bin/helmfile
-        chmod +x /usr/local/bin/helmfile
-        gcloud beta container clusters get-credentials ${{ inputs.cluster_name }} --region ${{ inputs.region }} --project ${{ inputs.project_id }}
+        chmod +x helmfile
+        sudo mv helmfile /usr/local/bin/helmfile
+        gcloud beta container clusters get-credentials ${{ inputs.cluster_name }} --region ${{ inputs.region }} --project ${{ inputs.project_id }} --queit
       shell: bash
