--- a/.github/actions/gcp-warm-up/action.yml
+++ b/.github/actions/gcp-warm-up/action.yml
@@ -48,7 +48,6 @@ runs:
       if: ${{ inputs.cluster_name != '' }}
       run: |
         curl -L https://github.com/roboll/helmfile/releases/download/v0.144.0/helmfile_linux_amd64 -o /usr/local/bin/helmfile
-        chmod +x helmfile
-        sudo mv helmfile /usr/local/bin/helmfile
-        gcloud beta container clusters get-credentials ${{ inputs.cluster_name }} --region ${{ inputs.region }} --project ${{ inputs.project_id }} --queit
+        chmod +x /usr/local/bin/helmfile
+        gcloud beta container clusters get-credentials ${{ inputs.cluster_name }} --region ${{ inputs.region }} --project ${{ inputs.project_id }}
       shell: bash
