--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -82,7 +82,7 @@ jobs:
 
     - name: Deploy to Kubernetes
       run: |
-        helmfile sync --file Postrix/kubernetes/${{ inputs.service_name }}/helmfile.yaml --environment=${{ inputs.environment }}
+        helmfile sync -f kubernetes/${{ inputs.service_name }}/helmfile.yaml --environment=${{ inputs.environment }}
 
     - name: Get service URL
       id: full-service-url
