put sync at the end

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -82,7 +82,7 @@ jobs:
 
     - name: Deploy to Kubernetes
       run: |
-        helmfile sync -f kubernetes/${{ inputs.service_name }}/helmfile.yaml --environment=${{ inputs.environment }}
+        helmfile --file=kubernetes/${{ inputs.service_name }}/helmfile.yaml --environment=${{ inputs.environment }} sync
 
     - name: Get service URL
       id: full-service-url
