--- a/kubernetes/core/dev/service.yaml
+++ b/kubernetes/core/dev/service.yaml
@@ -1,11 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}
-  namespace: {{ .Release.Namespace }}
+  name: core
 spec:
   selector:
-    app: {{ .Release.Name }}
+    app: core
   ports:
     - port: 80
       targetPort: 8000
