Added readiness/liveliness probes

--- a/kubernetes/core/prod/deployment.yaml
+++ b/kubernetes/core/prod/deployment.yaml
@@ -2,8 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: core
+  labels:
+    app: core
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: core
@@ -20,3 +22,24 @@ spec:
           env:
             - name: ENV
               value: prod
+          resources:
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
+            requests:
+              cpu: "250m"
+              memory: "256Mi"
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 8000
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            failureThreshold: 3
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 8000
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            failureThreshold: 3
