Deploy with helmfile

--- a/.github/workflows/build-and-deploy-main.yml
+++ b/.github/workflows/build-and-deploy-main.yml
@@ -22,6 +22,6 @@ jobs:
     with:
       environment: ${{ matrix.target }}
       service_name: ${{ matrix.service }}
-      service_url: ${{ matrix.service }}
+      namespace: ${{ matrix.target }}
       cluster_name: ${{ matrix.cluster_name }}
     secrets: inherit
