--- a/.github/actions/gcp-warm-up/action.yml
+++ b/.github/actions/gcp-warm-up/action.yml
@@ -49,3 +49,8 @@ runs:
       run: |
         gcloud beta container clusters get-credentials ${{ inputs.cluster_name }} --region ${{ inputs.region }} --project ${{ inputs.project_id }}
       shell: bash
+
+    - name: Setup helmfile
+      uses: mamezou-tech/setup-helmfile@v2.0.0
+      with:
+        helmfile-version: "v0.168.0"
