Set ingress host at cicd

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -82,7 +82,11 @@ jobs:
 
     - name: Deploy to Kubernetes
       run: |
-        helmfile sync -f kubernetes/helmfile.yaml --environment=${{ inputs.environment }} --namespace=${{ inputs.namespace }} -l app=${{ inputs.service_name }}
+        helmfile sync -f kubernetes/helmfile.yaml \
+          --environment=${{ inputs.environment }} \
+          --namespace=${{ inputs.namespace }} \
+          -l app=${{ inputs.service_name }}
+          --set ingress.host=${{ inputs.namespace }}-${{ inputs.service_name }}.${{ inputs.environment }}.postrix.io
 
     - name: Get service URL
       id: full-service-url
