--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -85,7 +85,7 @@ jobs:
         helmfile sync -f kubernetes/helmfile.yaml \
           --environment=${{ inputs.environment }} \
           --namespace=${{ inputs.namespace }} \
-          -l app=${{ inputs.service_name }}
+          -l app=${{ inputs.service_name }} \
           --set ingress.host=${{ inputs.namespace }}-${{ inputs.service_name }}.${{ inputs.environment }}.postrix.io
 
     - name: Get service URL
