--- a/.github/actions/repo-warm-up/action.yml
+++ b/.github/actions/repo-warm-up/action.yml
@@ -1,10 +1,18 @@
 name: 'Repo Warm Up'
 description: 'Warm up resources for GitHub Actions'
-  
+
+outputs:
+  git_hash: ${{ steps.get_git_hash.outputs.git_hash }}
 
 runs:
   using: 'composite'
   steps:
+    - name: Get Git Hash
+      id: get_git_hash
+      run: |
+        GIT_HASH=$(git rev-parse --short=8 HEAD) >> $GITHUB_OUTPUT
+      shell: bash
+
     - name: Install and Build TypeScript Actions
       run: |
         for dir in .github/actions/*/; do
