One deploy for all services comment

--- a/.github/workflows/build-and-deploy-adhoc.yml
+++ b/.github/workflows/build-and-deploy-adhoc.yml
@@ -47,3 +47,12 @@ jobs:
           title: "Service URLs"
           message: |
             [Core](${{ needs.build_and_deploy_adhoc.outputs.full_service_url }})
+
+      # - name: Deploy to Kubernetes
+      #   run: |
+      #     helmfile sync -f kubernetes/helmfile.yaml \
+      #       --environment=${{ inputs.environment }} \
+      #       --namespace=${{ inputs.namespace }} \
+      #       -l app=${{ inputs.service_name }} \
+      #       --set ingress.host=${{ inputs.namespace }}-${{ inputs.service_name }}.${{ inputs.environment }}.postrix.io
+      
