Deploy all services in one command

--- a/.github/workflows/build-and-deploy-adhoc.yml
+++ b/.github/workflows/build-and-deploy-adhoc.yml
@@ -40,19 +40,24 @@ jobs:
 
       - uses: ./.github/actions/repo-warm-up
 
+      - uses: ./.github/actions/gcp-warm-up
+        with:
+          project_id: ${{ secrets.GCP_DEV_PROJECT_ID }}
+          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.SERVICE_ACCOUNT }}
+          install_components: 'beta,gke-gcloud-auth-plugin'
+          region: ${{ vars.GCP_REGION }}
+          cluster_name: development
+
+      - name: Deploy to Kubernetes
+        run: |
+          helmfile sync -f kubernetes/helmfile.yaml --environment=dev --namespace=${{ inputs.branch_name || github.head_ref || github.ref_name }}
+
       - name: Comment PR
         uses: ./.github/actions/comment-pr
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           title: "Service URLs"
           message: |
-            [Core](${{ needs.build_and_deploy_adhoc.outputs.full_service_url }})
-
-      # - name: Deploy to Kubernetes
-      #   run: |
-      #     helmfile sync -f kubernetes/helmfile.yaml \
-      #       --environment=${{ inputs.environment }} \
-      #       --namespace=${{ inputs.namespace }} \
-      #       -l app=${{ inputs.service_name }} \
-      #       --set ingress.host=${{ inputs.namespace }}-${{ inputs.service_name }}.${{ inputs.environment }}.postrix.io
+            [Core](${{ inputs.branch_name || github.head_ref || github.ref_name }}-core.dev.postrix.io)
       
