--- a/.github/workflows/build-and-deploy-adhoc.yml
+++ b/.github/workflows/build-and-deploy-adhoc.yml
@@ -30,6 +30,7 @@ jobs:
   comment_pr:
     permissions:
       contents: read
+      id-token: write
       pull-requests: write
 
     runs-on: ubuntu-latest
