--- a/kubernetes/helmfile.yaml
+++ b/kubernetes/helmfile.yaml
@@ -1,6 +1,8 @@
 repositories:
   - name: stable
     url: https://charts.helm.sh/stable
+  - name: bitnami
+    url: https://charts.bitnami.com/bitnami
 
 environments:
   local: {}
