Added local nginx

--- a/kubernetes/core/templates/ingress.yaml
+++ b/kubernetes/core/templates/ingress.yaml
@@ -10,10 +10,10 @@ spec:
   - host: {{ .Values.ingress.host }}
     http:
       paths:
-      - path: /
+      - path: /core
         pathType: Prefix
         backend:
           service:
             name: {{ .Release.Name }}
             port:
-              number: 80
+              number: 8000
