--- a/kubernetes/core/values/local.yaml
+++ b/kubernetes/core/values/local.yaml
@@ -4,10 +4,10 @@ env: local
 containerPort: 8000
 resources:
   limits:
-    cpu: "500m"
-    memory: "512Mi"
+    cpu: 500m
+    memory: 512Mi
   requests:
-    cpu: "250m"
-    memory: "256Mi"
+    cpu: 250m
+    memory: 256Mi
 ingress:
-  host: "core.local.postrix.io"
+  host: localhost
