--- a/kubernetes/helmfile.yaml
+++ b/kubernetes/helmfile.yaml
@@ -3,6 +3,8 @@ repositories:
     url: https://charts.helm.sh/stable
   - name: bitnami
     url: https://charts.bitnami.com/bitnami
+  - name: ingress-nginx
+    url: https://kubernetes.github.io/ingress-nginx
 
 environments:
   local: {}
@@ -10,6 +12,14 @@ environments:
   prod: {}
 
 releases:
+  - name: nginx
+    namespace: ingress-nginx
+    chart: ingress-nginx/ingress-nginx
+    labels:
+      app: nginx
+    values:
+      - ./nginx/values/{{ .Environment.Name }}.yaml
+
   - name: redis
     namespace: "{{ default .Namespace .Environment.Name }}"
     chart: bitnami/redis
