--- a/.github/workflows/build-and-deploy-main.yml
+++ b/.github/workflows/build-and-deploy-main.yml
@@ -1,10 +1,11 @@
 name: Build and deploy main to prod/sandbox
 
 on:
-  workflow_run:
-    workflows: ["Terraform Apply"]
-    types:
-      - completed
+  workflow_dispatch:
+  # workflow_run:
+  #   workflows: ["Terraform Apply"]
+  #   types:
+  #     - completed
 
 jobs:
   build_and_deploy_main:
