Setup k8s locally for minikube development

--- a/kubernetes/core/templates/deployment.yaml
+++ b/kubernetes/core/templates/deployment.yaml
@@ -28,17 +28,17 @@ spec:
             requests:
               cpu: {{ .Values.resources.requests.cpu }}
               memory: {{ .Values.resources.requests.memory }}
-          readinessProbe:
-            httpGet:
-              path: /
-              port: {{ .Values.containerPort }}
-            initialDelaySeconds: 10
-            periodSeconds: 5
-            failureThreshold: 3
-          livenessProbe:
-            httpGet:
-              path: /
-              port: {{ .Values.containerPort }}
-            initialDelaySeconds: 10
-            periodSeconds: 10
-            failureThreshold: 3
+          # readinessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: {{ .Values.containerPort }}
+          #   initialDelaySeconds: 10
+          #   periodSeconds: 5
+          #   failureThreshold: 3
+          # livenessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: {{ .Values.containerPort }}
+          #   initialDelaySeconds: 10
+          #   periodSeconds: 10
+          #   failureThreshold: 3
