--- a/kubernetes/core/values/local.yaml
+++ b/kubernetes/core/values/local.yaml
@@ -1,5 +1,5 @@
 replicas: 1
-image: us-central1-docker.pkg.dev/postrix-development/development-docker/core:latest
+image: kicbase/echo-server:1.0
 env: local
 containerPort: 8000
 resources:
