Finished local k8s setup

--- a/kubernetes/core/templates/deployment.yaml
+++ b/kubernetes/core/templates/deployment.yaml
@@ -17,7 +17,7 @@ spec:
         - name: {{ .Release.Name }}
           image: {{ .Values.image }}
           ports:
-            - containerPort: 8000
+            - containerPort: {{ .Values.containerPort }}
           env:
             - name: ENV
               value: {{ .Values.env }}
@@ -28,17 +28,17 @@ spec:
             requests:
               cpu: {{ .Values.resources.requests.cpu }}
               memory: {{ .Values.resources.requests.memory }}
-          # readinessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: {{ .Values.containerPort }}
-          #   initialDelaySeconds: 10
-          #   periodSeconds: 5
-          #   failureThreshold: 3
-          # livenessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: {{ .Values.containerPort }}
-          #   initialDelaySeconds: 10
-          #   periodSeconds: 10
-          #   failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /
+              port: {{ .Values.containerPort }}
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            failureThreshold: 3
+          livenessProbe:
+            httpGet:
+              path: /
+              port: {{ .Values.containerPort }}
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            failureThreshold: 3
