--- a/kubernetes/core/values/local.yaml
+++ b/kubernetes/core/values/local.yaml
@@ -1,7 +1,11 @@
 replicas: 1
 image: kicbase/echo-server:1.0
 env: local
-containerPort: 8000
+containerPort: 8080
+ingressPort: 8080
+servicePort: 8080
+serviceTargetPort: 8080
+serviceType: LoadBalancer
 resources:
   limits:
     cpu: 500m
