--- a/kubernetes/core/templates/ingress.yaml
+++ b/kubernetes/core/templates/ingress.yaml
@@ -16,4 +16,4 @@ spec:
           service:
             name: {{ .Release.Name }}
             port:
-              number: 8080
+              number: {{ .Values.ingressPort }}
