--- a/kubernetes/core/templates/service.yaml
+++ b/kubernetes/core/templates/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: core
+  name: {{ .Release.Name }}
 spec:
-  type: LoadBalancer
+  type: {{ .Values.serviceType }}
   selector:
-    app: core
+    app: {{ .Release.Name }}
   ports:
-    - port: 8080
-      targetPort: 8080
+    - port: {{ .Values.servicePort }}
+      targetPort: {{ .Values.serviceTargetPort }}
