--- a/kubernetes/core/values/dev.yaml
+++ b/kubernetes/core/values/dev.yaml
@@ -2,12 +2,16 @@ replicas: 1
 image: us-central1-docker.pkg.dev/postrix-development/development-docker/core:latest
 env: dev
 containerPort: 8000
+ingressPort: 8080
+servicePort: 8080
+serviceTargetPort: 8080
+serviceType: ClusterIP
 resources:
   limits:
-    cpu: "500m"
-    memory: "512Mi"
+    cpu: 500m
+    memory: 512Mi
   requests:
-    cpu: "250m"
-    memory: "256Mi"
+    cpu: 250m
+    memory: 256Mi
 ingress:
-  host: "core.dev.postrix.io"
+  host: core.dev.postrix.io
