--- a/kubernetes/core/templates/ingress.yaml
+++ b/kubernetes/core/templates/ingress.yaml
@@ -10,7 +10,7 @@ spec:
   - host: {{ .Values.ingress.host }}
     http:
       paths:
-      - path: /core
+      - path: /
         pathType: Prefix
         backend:
           service:
