--- a/kubernetes/helmfile.yaml
+++ b/kubernetes/helmfile.yaml
@@ -20,6 +20,11 @@ releases:
       - aws:
           zoneType: public
       - txtOwnerId: postrix
+      - serviceAccount:
+          create: true
+          name: external-dns
+          annotations:
+            eks.amazonaws.com/role-arn: arn:aws:iam::384389382109:role/postrix-external-dns-policy
 
   - name: nginx
     namespace: ingress-nginx
