--- a/kubernetes/external-dns/templates/cluster-role-binding.yaml
+++ b/kubernetes/external-dns/templates/cluster-role-binding.yaml
@@ -11,4 +11,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: external-dns
-    namespace: {{ .Release.Namespace }}
+    namespace: kube-system
