--- a/kubernetes/external-dns/templates/deployment.yaml
+++ b/kubernetes/external-dns/templates/deployment.yaml
@@ -22,12 +22,11 @@ spec:
           args:
             - --source=service
             - --source=ingress
-            - --domain-filter={{ .Values.domainFilter }}
-            - --provider={{ .Values.provider }}
-            - --policy=upsert-only
-            - --aws-zone-type={{ .Values.aws.zoneType }}
+            - --domain-filter=postrix.io
+            - --provider=aws
+            - --aws-zone-type=public
             - --registry=txt
-            - --txt-owner-id={{ .Values.txtOwnerId }}
+            - --txt-owner-id=external-dns
           env:
             - name: AWS_DEFAULT_REGION
-              value: {{ .Values.region }}
+              value: us-east-1
