--- a/kubernetes/helmfile.yaml
+++ b/kubernetes/helmfile.yaml
@@ -20,30 +20,14 @@ releases:
     values:
       - ./external-dns/values/{{ .Environment.Name }}.yaml
 
-  # TODO: Update to use the new aws ALB instead of CLB
-  - name: nginx
+  - name: ingress-controller
     namespace: ingress-nginx
-    chart: ingress-nginx/ingress-nginx
+    chart: ./ingress-controller
     labels:
-      app: nginx
+      app: ingress-controller
     values:
-      - controller:
-          service:
-            type: LoadBalancer
-            ports:
-              http: 80
-              https: 443
-            targetPorts:
-              http: http
-              https: http  # Important: both HTTP and HTTPS traffic should go to HTTP backend
-            annotations:
-              service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
-              service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:384389382109:certificate/2729c5c5-85a3-4a24-9988-ef0a12b7b513"
-              service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
-          config:
-            use-forwarded-headers: "true"
-            proxy-real-ip-cidr: "0.0.0.0/0"
-            enable-real-ip: "true"
+      - ./ingress-controller/values/{{ .Environment.Name }}.yaml
+
   # - name: redis
   #   namespace: "{{ default .Namespace .Environment.Name }}"
   #   chart: bitnami/redis
