--- a/.github/actions/aws-warm-up/action.yml
+++ b/.github/actions/aws-warm-up/action.yml
@@ -1,9 +1,12 @@
 name: 'AWS Warm Up'
 description: 'Warm up AWS resources for GitHub Actions'
 inputs:
-  role_to_assume:
-    description: 'ARN of role to assume'
-    required: false
+  aws-access-key-id:
+    description: 'AWS Access Key ID'
+    required: true
+  aws-secret-access-key:
+    description: 'AWS Secret Access Key'
+    required: true
 
 runs:
   using: 'composite'
@@ -11,10 +14,10 @@ runs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
+        aws-access-key-id: ${{ inputs.aws-access-key-id }}
+        aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
         aws-region: us-east-1
-        role-to-assume: ${{ inputs.role_to_assume }}
+        # role-to-assume: arn:aws:iam::384389382109:role/postrix-admin
 
     # - name: Install kubectl
     #   uses: azure/setup-kubectl@v3
