--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -35,44 +35,22 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set Dynamic Environment Variables
-      uses: actions/github-script@v7
-      with:
-        script: |
-          const envVars = {
-            dev: {
-              PROJECT_ID: '${{ secrets.GCP_DEV_PROJECT_ID }}',
-              IMAGE: '${{ vars.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_DEV_PROJECT_ID }}/${{ vars.GCP_DEV_ARTIFACT_REPO }}/${{ inputs.service_name }}'
-            },
-            prod: {
-              PROJECT_ID: '${{ secrets.GCP_PROD_PROJECT_ID }}',
-              IMAGE: '${{ vars.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROD_PROJECT_ID }}/${{ vars.GCP_PROD_ARTIFACT_REPO }}/${{ inputs.service_name }}'
-            }
-          };
-          const selectedEnv = envVars['${{ inputs.environment }}'];
-          core.exportVariable('PROJECT_ID', selectedEnv.PROJECT_ID);
-          core.exportVariable('IMAGE', selectedEnv.IMAGE);
-
-    - uses: ./.github/actions/gcp-warm-up
-      with:
-        project_id: ${{ env.PROJECT_ID }}
-        workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-        service_account: ${{ secrets.SERVICE_ACCOUNT }}
-        install_components: 'beta,gke-gcloud-auth-plugin'
-        region: ${{ vars.GCP_REGION }}
-        configure_docker: true
-        cluster_name: ${{ inputs.cluster_name }}
+      uses: actions/checkout@v4
 
     - name: Repo Warm Up
       uses: ./.github/actions/repo-warm-up
       id: repo_warm_up
 
-    - name: Build Docker image
-      run: |
-        docker build -t ${{ env.IMAGE }}:${{ steps.repo_warm_up.outputs.git_hash }} -t ${{ env.IMAGE }}:latest ./services/${{ inputs.service_name }}
+    - name: Configure AWS credentials
+      uses: ./.github/actions/aws-warm-up
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-    - name: Push Docker image to Google Artifact Registry
-      run: |
-        docker push ${{ env.IMAGE }} --all-tags
+    # - name: Build Docker image
+    #   run: |
+    #     docker build -t ${{ env.IMAGE }}:${{ steps.repo_warm_up.outputs.git_hash }} -t ${{ env.IMAGE }}:latest ./services/${{ inputs.service_name }}
+
+    # - name: Push Docker image to Google Artifact Registry
+    #   run: |
+    #     docker push ${{ env.IMAGE }} --all-tags
