--- a/.github/actions/aws-warm-up/action.yml
+++ b/.github/actions/aws-warm-up/action.yml
@@ -14,10 +14,8 @@ runs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        aws-access-key-id: ${{ inputs.aws-access-key-id }}
-        aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
         aws-region: us-east-1
-        # role-to-assume: arn:aws:iam::384389382109:role/postrix-admin
+        role-to-assume: arn:aws:iam::384389382109:role/github-actions-role
 
     # - name: Install kubectl
     #   uses: azure/setup-kubectl@v3
