--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -47,6 +47,20 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+  
+    - name: Build Docker image
+      run: |
+        docker build -t yuvadius/${{ inputs.service_name }}:${{ steps.repo_warm_up.outputs.git_hash }} ./services/${{ inputs.service_name }}
+
+    - name: Push Docker image
+      run: |
+        docker push yuvadius/${{ inputs.service_name }}:${{ steps.repo_warm_up.outputs.git_hash }} --all-tags
+
     # - name: Build Docker image
     #   run: |
     #     docker build -t ${{ env.IMAGE }}:${{ steps.repo_warm_up.outputs.git_hash }} -t ${{ env.IMAGE }}:latest ./services/${{ inputs.service_name }}
