--- a/.github/actions/aws-warm-up/action.yml
+++ b/.github/actions/aws-warm-up/action.yml
@@ -17,12 +17,7 @@ runs:
 
     - name: Update kubeconfig
       run: |
-        aws eks update-kubeconfig --region us-east-1 --name postrix --role-arn arn:aws:iam::384389382109:role/github-actions-role
-      shell: bash
-
-    - name: Verify kubectl access
-      run: |
-        kubectl get nodes
+        aws eks update-kubeconfig --region us-east-1 --name postrix
       shell: bash
 
     # - name: Setup helmfile
