--- a/.github/actions/aws-warm-up/action.yml
+++ b/.github/actions/aws-warm-up/action.yml
@@ -17,7 +17,13 @@ runs:
 
     - name: Update kubeconfig
       run: |
-        aws eks update-kubeconfig --region us-east-1 --name postrix
+        aws eks get-token --cluster-name postrix --region us-east-1
+        aws eks update-kubeconfig --name postrix --region us-east-1
+      shell: bash
+  
+    - name: Verify kubectl access
+      run: |
+        kubectl get nodes
       shell: bash
 
     # - name: Setup helmfile
